  messages as qutebrowser messages (rather than only logging them). By default,
  errors in internal `qute:` pages and userscripts are shown to the user.
- New `content.javascript.log_message.excludes` setting, which allows to exclude
  certain messages from the `content.javascript.log_message.levels` setting
  described above.
- New `qute-1pass` userscript using the 1password commandline to fill
  passwords.
- New features in userscripts:
    * `qutedmenu` gained new `window` and `private` options.
    * `qute-keepassxc` now supports unlock-on-demand, multiple account
      selection via rofi, and inserting TOTP-codes (experimental).

Removed
~~~~~~~

- Support for Python 3.6 is dropped, as it's been
  https://discuss.python.org/t/python-3-6-rides-into-the-sunset/12964[end-of-life upstream]
  since December 2021. Python 3.7.0 or newer is now required.
- It's planned to drop support for various legacy platforms and libraries which
  are unsupported upstream, such as:
  * Qt before 5.15 LTS (plus adding support for Qt 6.2+)
  * The QtWebKit backend
  * macOS 10.14 (via Homebrew)
  * 32-bit Windows (via Qt)
  * Windows 8 (via Qt)
  * Windows 10 before 1809 (via Qt)
  * Possibly other more minor dependency changes

Changed
~~~~~~~

- The qutebrowser icons got moved from `icons/` to `qutebrowser/icons` in the
  repository, so that it's possible for qutebrowser to load them using Python's
  resource system (rather than compiling them into a Qt resource file).
  Packagers are advised to use `misc/Makefile` if possible, which has been
  updated with the new paths.
- The `content.javascript.can_access_clipboard` setting got renamed to
  `content.javascript.clipboard` and now understands three different values
  rather than being a boolean: `none` (formerly `false`), `access` (formerly
  `true`) and `access-paste` (additionally allows pasting content, needed for
  websites like Photopea or GitHub Codespaces).